<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/textViewFacultyName"
        android:textAlignment="center"
        android:text="@string/name_of_faculty"
        android:textColor="@color/red"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewID"
            android:adjustViewBounds="true"
            android:layout_weight="4"
            android:contentDescription="@string/a_picture_of_faculty"
            android:src="@drawable/university_logo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTelephone"
                android:layout_weight="1"
                android:onClick="onClickDialPhone"
                android:text="@string/faculty_telephone"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonWebsite"
                android:layout_weight="1"
                android:onClick="onClickOpenWeb"
                android:text="@string/hyperlink_to_website"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:background="@color/cyan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_content"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart"
                    android:background="@color/cyan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_content"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart"
                    android:background="@color/cyan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/address_content"
                    android:textAlignment="viewStart"
                    android:background="@color/cyan"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="avatar_picture"
                android:adjustViewBounds="true"
                android:src="@drawable/avatar"/>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:onClick="onClickPlayMedia"
            android:text="click here to see the gift!!"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="onClickStartTimer"
            android:text="Let's start the timer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:onClick="onClickSetAlarm"
            android:text="TEST Alarm"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/big_avatar"/>
    </LinearLayout>
</LinearLayout>